--- a/style.css
+++ b/style.css
@@ -1,13 +1,12 @@
 body {
     background-color: #abcdef;
+    font-family:verdana;
 }
 
-h1 h2 {
-    font-family:verdana; 
+h1 {   
     border:2px solid DodgerBlue;
 }
 
 p {  
-    font-family:verdana;
     background-color:#7bace3;
 }
