--- a/style.css
+++ b/style.css
@@ -1,19 +1,37 @@
 body {
-    background-color: #abcdef;
+    background-color:pink;
+}
+
+h1, h3 {
+    font-family:verdana;
+    border:2px solid magenta;
+}
+
+p {
     font-family:verdana;
 }
 
-h1 { 
-    font-family:verdana;
-    border:2px solid DodgerBlue;
+a {
+  text-decoration:none;
+  color: purple;
 }
 
-h3 { 
-    font-family:verdana;
-    border:2px solid DodgerBlue;
+ul#menu {
+    list-style-type: none;
+    margin: 0;
+    padding: 5px;
+    overflow: hidden;
+    background-color: #fff;
 }
 
-p {  
-    font-family:verdana;
-    background-color:#7bace3;
+li#menu {
+  float: left;
+}
+
+li a#menu{
+    display: block;
+    color: red;
+    text-align: center;
+    padding: 16px;
+    text-decoration: none;
 }
