--- a/style.css
+++ b/style.css
@@ -16,22 +16,27 @@ a {
   color: purple;
 }
 
-ul#menu {
+ul {
     list-style-type: none;
     margin: 0;
-    padding: 5px;
+    padding: 0;
     overflow: hidden;
     background-color: #fff;
 }
 
-li#menu {
-  float: left;
+li {
+    float: left;
 }
 
-li a#menu{
+li a {
     display: block;
-    color: red;
+    color: pink;
     text-align: center;
-    padding: 16px;
+    padding: 14px 16px;
     text-decoration: none;
+}
+
+/* Change the link color to black on hover */
+li a:hover {
+    background-color: #111;
 }
