--- a/style.css
+++ b/style.css
@@ -17,11 +17,14 @@ a {
 }
 
 ul {
+    position:fixed;
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
     background-color: #fff;
+    top: 0;
+    width: 100%;
 }
 
 li {
