--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     background-color: pink;
 }
 
-h1, h3 {
+h1 {
     font-family: verdana;
     color: white;
 }
@@ -13,46 +13,45 @@ p {
 
 a {
   text-decoration:none;
-  color: purple;
+  color: red;
 }
 
  /* TOP MENU */
-.clearfix:after {
-  content: "";
-  display: table;
+
+nav {
+  background-color: #fff;
+  border: 1px solid #dedede;
+  border-radius: 4px;
+  box-shadow: 0 2px 2px -1px rgba (0, 0, 0, 0,055);
+  color: #888;
+  display: block;
+  margin: 8px 22px 8px 22px;
+  overflow: hidden;
+  width: 100%
 }
 
-.nav-wrapper {
-  width: 100%;
-  background: #999;
-  position: fixed;
-  top: 0;
+nav ul {
+    margin: 0;
+    padding: 0;
 }
 
-.nav-menu {
-  position: relative;
-  display: inline-block;
-}
+nav ul li {
+    display: inline-block;
+    list-style-type: none;
 
-.nav-menu li {
-  display: inline;
-  list-style-type: none;
-}
+    -webkit-transition: all 0.2s;
+    -moz-transition: all 0.2s;
+    -ms-transition: all 0.2s;
+    -o-transition: all 0.2s;
+    transition: all 0.2s;
+    }
 
-.nav-menu ul li:hover > ul {
-  display: inline-block;
-}
-
-.dropdown > ul > li:after {
-  content: "\25BC";
-  font-size: .5em;
-  display: inline;
-}
-
-.sub-menu {
-  position: absolute;
-  display: none;
-  background: #ccc;
-}
+nav > ul > li > a {
+    color: #aaa;
+    display: block;
+    line-height: 56px;
+    padding: 0 24px;
+    text-decoration: none;
+        }
 
 /* END OF MENU */
